# agent-harness

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_REQUIREMENTS.md  README.md  main.py  pyproject.toml
app/: __init__.py  logging_config.py
app/api/: __init__.py  app.py
app/db/: __init__.py  models.py  repositories.py
app/harness/: __init__.py  clarification.py  llm_planner.py  planner.py  runtime.py  tools.py
app/schemas/: agents.py
app/services/: __init__.py  fixtures.py  procurement.py
app/static/: index.html
docs/: AI_USAGE.md  ARCHITECTURE.md
fixtures/: budgets.json  catalog.json  policies.json  sample_requests.json
scripts/: demo.py
tests/: test_agent_api.py  test_llm_planner.py  test_planner_parsing.py
