[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procurement"
version = "0.1.0"
description = "Minimal agent harness for procurement approval workflows with guarded tools, planning, and approval boundaries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "litellm>=1.80.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100


[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
